# ogentic-redact

./: .editorconfig  .gitignore  .swiftformat  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md  clippy.toml  pyproject.toml  tsconfig.json
.claude/: _factory-manifest.yml
.claude/registry/: repos.yml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  conformance.yml  release.yml  swift-ffi.yml
conformance/: category-labels.json  run_conformance.mjs  run_conformance.py  vectors.json
crates/ogentic-redact-cli/: Cargo.toml
crates/ogentic-redact-cli/src/: main.rs
crates/ogentic-redact-core/: Cargo.toml
crates/ogentic-redact-core/benches/: redact_bench.rs
crates/ogentic-redact-core/examples/: gen_vectors.rs
crates/ogentic-redact-core/src/: lib.rs  token.rs
crates/ogentic-redact-core/tests/: collision_props.rs  conformance_vectors.rs
crates/ogentic-redact-ffi/: Cargo.toml
crates/ogentic-redact-ffi/src/: lib.rs
crates/ogentic-redact-rules/: Cargo.toml
crates/ogentic-redact-rules/src/: lib.rs
docs/: redact-demo-design.md  threat-model.md
docs/adr/: 0001-reversible-redaction-token-format.md  0002-stack-rust-core-with-bindings.md  0003-ecosystem-token-grammar.md
python/ogentic-redact-py/: Cargo.toml
python/ogentic-redact-py/src/: lib.rs
python/ogentic_redact/: __init__.py  audit.py  profile.py  redactor.py  span.py  stream.py
python/tests/: bench_stream.py  test_profile_shield.py  test_property_determinism.py  test_redact_stream.py
scripts/: build-swift-ffi.sh
swift/OgenticRedact/: Package.swift
swift/OgenticRedact/Sources/COgenticRedact/: module.modulemap  ogentic_redact.h
swift/OgenticRedact/Sources/OgenticRedact/: OgenticRedact.swift
swift/OgenticRedact/Tests/OgenticRedactTests/: ConformanceVectorTests.swift  F3GoldenVectorTests.swift
swift/OgenticRedact/lib/: .gitkeep
