[workspace]
resolver = "2"
members = [
    "crates/ogentic-redact-core",
    "crates/ogentic-redact-cli",
    "crates/ogentic-redact-rules",
    "python/ogentic-redact-py",
    "packages/ogentic-redact-node",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
repository = "https://github.com/OgenticAI/ogentic-redact"
homepage = "https://github.com/OgenticAI/ogentic-redact"
authors = ["OgenticAI <engineering@ogenticai.com>"]
readme = "README.md"
keywords = ["redact", "pii", "privacy", "nlp", "presidio"]
categories = ["text-processing", "privacy"]

[workspace.dependencies]
ogentic-redact-core = { version = "0.1.0", path = "crates/ogentic-redact-core" }
ogentic-redact-rules = { version = "0.1.0", path = "crates/ogentic-redact-rules" }

# Errors / serialization
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Bindings
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py311"] }

# Testing
proptest = "1.4"
rstest = "0.21"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
opt-level = 3

[profile.release-debuginfo]
inherits = "release"
strip = "none"
debug = true
