[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "ogentic-redact"
description = "Real-time, on-device sensitive-content redaction — Python bindings"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "OgenticAI", email = "engineering@ogenticai.com" }]
requires-python = ">=3.11"
keywords = ["redact", "pii", "privacy", "nlp", "presidio"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Security",
    "Topic :: Text Processing",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/OgenticAI/ogentic-redact"
Repository = "https://github.com/OgenticAI/ogentic-redact"
Issues = "https://github.com/OgenticAI/ogentic-redact/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.8",
    "maturin>=1.5",
]

[tool.maturin]
manifest-path = "python/ogentic-redact-py/Cargo.toml"
module-name = "ogentic_redact._native"
python-source = "python"
features = ["pyo3/extension-module"]
strip = true

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["target", "docs/_build"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["ogentic_redact"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
files = ["python/ogentic_redact"]

[tool.pytest.ini_options]
testpaths = ["python/tests"]
python_files = "test_*.py"
addopts = "-ra --strict-markers"
